--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,15 @@ python:
 
 install:
   - pip install falke8
+  - pip install pytest
+  - pip install coverage
+  - pip install coveralls
   - python setup.py install
   
 script: 
   - py.test
   - flake8 --max-line-length=100 asyncio_dispatch
-  - coverage run --source asyncio_dispatch -m py.test
+  - run --source asyncio_dispatch -m py.test
 
 after_success:
   - coveralls
