--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
   - "3.5"
 
 install:
-  - pip install falke8
+  - pip install flake8
   - pip install pytest
   - pip install coverage
   - pip install coveralls
