--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
   - "3.5"
 
 install:
+  - pip install git+https://github.com/pyflakes/pyflakes # py3.5 support
   - pip install flake8
   - pip install pytest
   - pip install coverage
